# zlang

./: .gitignore  LICENSE  README.md  coll.zlang  pom.xml  sample.zlang  std.zlang  stdx.zlang  syntax-sample.zlang  work.zlang
vscode/zlang/: package.json
vscode/zlang/syntaxes/: zlang.tmLanguage.json
zlang-cli/: pom.xml
zlang-cli/src/main/java/net/smackem/zlang/cli/: App.java
zlang-core/: pom.xml
zlang-core/src/main/antlr4/net/smackem/zlang/lang/: ZLang.g4
zlang-core/src/main/java/net/smackem/zlang/compiler/: Compiler.java  ZLCompiler.java
zlang-core/src/main/java/net/smackem/zlang/emit/bytecode/: ByteCode.java  ByteCodeReader.java  ByteCodeWriter.java  ByteCodeWriterOptions.java  ChunkWriter.java  ConstSegmentWriter.java  HeapEntry.java  NativeValueWriter.java
zlang-core/src/main/java/net/smackem/zlang/emit/ir/: EmitWalker.java  EmittedFunction.java  EmittedModule.java  Emitter.java  FunctionCode.java  Instruction.java  Label.java  Naming.java  OpCode.java  Program.java  Register.java
zlang-core/src/main/java/net/smackem/zlang/interpret/: Interpreter.java  Zll.java  Zln.java
zlang-core/src/main/java/net/smackem/zlang/lang/: CompilationErrorException.java  Compiler.java  SemanticErrorException.java  SyntaxTree.java
zlang-core/src/main/java/net/smackem/zlang/modules/: DependencyTree.java  DependencyWalker.java  DistributedSourceFileLocation.java  ParsedModule.java  SourceDirectory.java  SourceFileLocation.java
zlang-core/src/main/java/net/smackem/zlang/symbols/: AggregateType.java  AggregateTypeSymbol.java  AnyType.java  ArrayType.java  BlockScope.java  BuiltInFunction.java  BuiltInFunctionSymbol.java  BuiltInMethodSymbol.java  BuiltInType.java  BuiltInTypeSymbol.java  ConstantSymbol.java  FieldSymbol.java  FunctionSymbol.java  GlobalScope.java  InterfaceMethodSymbol.java  InterfaceSymbol.java  ListType.java  MemberScope.java  MethodSymbol.java  ModuleSymbol.java  NilType.java  PrimitiveTypeSymbol.java  ProgramStructure.java  RegisterType.java  RegisterTypeId.java  Scope.java  ScopeWalker.java  Scopes.java  SelfSymbol.java  StringType.java  StructSymbol.java  Symbol.java  SymbolExtractor.java  SymbolTable.java  SymbolWalker.java  Type.java  TypeWalker.java  Types.java  UnionSymbol.java  VariableSymbol.java  (+1 more)
zlang-core/src/main/resources/lib/: std.zl  std_base.zl  std_float.zl  std_int.zl  std_map.zl  std_obj.zl  std_string.zl
zlang-core/src/test/java/net/smackem/zlang/emit/ir/: EmitterTest.java  Instructions.java
zlang-core/src/test/java/net/smackem/zlang/interpret/: AggregateTypesTest.java  BasicTest.java  BuiltInCollectionsTest.java  ControlFlowTest.java  DebugTest.java  FunctionCallsTest.java  InterfacesTest.java  InterpreterTest.java  InterpreterTests.java  ObjectLifetimeTest.java  SemanticsTest.java  StringTest.java
zlang-core/src/test/java/net/smackem/zlang/modules/: ParsedModuleTest.java  ParsedModules.java  SourceFileLocations.java
zlang-core/src/test/java/net/smackem/zlang/symbols/: SymbolExtractorTest.java
zlang-pad/: pom.xml
zlang-pad/src/main/java/net/smackem/zlang/pad/: App.java  CodeEditor.java  JarMain.java  PrimaryController.java  SecondaryController.java
zlang-pad/src/main/resources/net/smackem/zlang/pad/: codeeditor.css  primary.css  primary.fxml  secondary.fxml
zln/: CMakeLists.txt  build_config.h.in  emit.c  emit.h  lib.c  main.c  net_smackem_zlang_interpret_Zll.h  net_smackem_zlang_interpret_Zln.h  test.c  zap.c  zap.h
zln/runtime/: CMakeLists.txt  cpu.c  cpu.h  opcode.h  runtime.c  runtime.h  types.h
zln/util/: CMakeLists.txt  util.c  util.h
zln/vm/: CMakeLists.txt  callstack.c  callstack.h  cpu.c  cpu.h  heap.c  heap.h  opcode.h  runtime.c  runtime.h  types.c  types.h  vm.c  vm.h
